# agentforge

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  dashboard.html  pyproject.toml  quickstart.py  setup.py
.github/workflows/: agent-fix.yml  ci.yml  deploy-pages.yml
agentforge/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cli.py  pyproject.toml
agentforge/.github/workflows/: ci.yml
agentforge/agentforge/: __init__.py  cli.py
agentforge/agentforge/core/: __init__.py  agent_loop.py  schemas.py
agentforge/agentforge/evaluation/: __init__.py  metrics.py
agentforge/agentforge/memory/: __init__.py  factory.py
agentforge/agentforge/tools/: __init__.py  registry.py
agentforge/configs/: default.yaml  sliding_window.yaml
agentforge/core/: __init__.py  agent_loop.py  schemas.py
agentforge/evaluation/: __init__.py  judge.py  metrics.py
agentforge/harness/: __init__.py
agentforge/memory/: __init__.py  factory.py
agentforge/multi_agent/: __init__.py  orchestrator.py
agentforge/tasks/coding/: fix_fibonacci_bug.yaml
agentforge/tests/test_core/: test_schemas.py
agentforge/tests/test_evaluation/: test_metrics.py
agentforge/tests/test_tools/: test_registry.py
agentforge/tools/: __init__.py  registry.py
configs/: default.yaml  sliding_window.yaml
docs/: CI_SETUP.md  blog.html  dashboard.html  index.html
results/: default_results.json
scripts/: ci_agent_run.py  ci_analyze.py
tasks/coding/: fix_bfs_shortest_path.yaml  fix_fibonacci_bug.yaml  fix_json_parser.yaml  fix_lru_cache.yaml  fix_merge_sort.yaml  fix_rate_limiter.yaml
tests/test_core/: test_schemas.py
tests/test_evaluation/: test_metrics.py
tests/test_tools/: test_registry.py
